--- a/services.properties
+++ b/services.properties
@@ -1,2 +1,2 @@
 END_POINT=http://dummy.restapiexample.com/api/v1/%s
-JsonResponseDefaultPath= /test/resources/jsonResponce
+JsonResponseDefaultPath= %s\\src\\main\\resources\\jsonresponce\\
